--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Ashray Gupta</h1>
+        <h1 class="heading">Manikonda Yash</h1>
         <h2 class="subheading">MERN Task Javascript</h2>
         <ul class="list">
             <li class="list-item"><a href="task1.html">Task 1 </a></li>
